Batch_Gradient_Descent

--- a/Gradient_Descent/Gradient_Descent.ipynb
+++ b/Gradient_Descent/Gradient_Descent.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "1000d27b",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "29b2eaa6",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "4fff537c",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
        "4        2130         5          2       Suburb       2001  272436.239065"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "66cb94d0",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "(50000, 6)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 90,
+   "id": "ac64c5f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((442, 10), (442,))"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_diabetes\n",
+    "\n",
+    "X_dia, y_dia = load_diabetes(return_X_y=True)\n",
+    "\n",
+    "X_dia.shape, y_dia.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "2c3c6c3b",
    "metadata": {},
    "outputs": [],
@@ -167,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "0570add8",
    "metadata": {},
    "outputs": [
@@ -177,7 +202,7 @@
        "((40000, 5), (10000, 5), (40000,), (10000,))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "66a02f64",
    "metadata": {},
    "outputs": [],
@@ -202,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "4fc94936",
    "metadata": {},
    "outputs": [],
@@ -213,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "5f0a1092",
    "metadata": {},
    "outputs": [
@@ -223,7 +248,7 @@
        "((40000, 7), (40000,))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,34 +259,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "4449b954",
    "metadata": {},
    "outputs": [],
    "source": [
     "class GDRegressor : \n",
-    "    def __init__(self, learning_rate, epochs) :\n",
+    "    def __init__(self, learning_rate=0.01, epochs=100) :\n",
     "        self.lr = learning_rate\n",
     "        self.epochs = epochs\n",
     "        self.m =None\n",
-    "        self.b = 0\n",
+    "        self.b = None\n",
     "        \n",
     "    def fit(self, X,y):\n",
-    "        X = np.array(X)\n",
-    "        y = np.array(y)\n",
+    "        #X = np.array(X)\n",
+    "       # y = np.array(y)\n",
     "        \n",
     "        n_samples, n_features = X.shape\n",
     "        self.m = np.zeros(n_features)\n",
-    "        self.bias = 0\n",
+    "        self.b = 0\n",
     "        \n",
     "        # Calculate b and m using GD \n",
     "        for i in range(self.epochs) :\n",
-    "            y_pred = np.dot(X, self.m) + self.bias\n",
+    "            y_pred = np.dot(X, self.m) + self.b\n",
     "            error = y_pred - y\n",
     "            \n",
     "            \n",
-    "            db = (-2/n_samples) * np.sum(error)\n",
-    "            dm = (-2/n_samples) * np.dot(X.T, error)\n",
+    "            db = (-2/X.shape[0]) * np.sum(error)\n",
+    "           # dm = (-2/n_samples) * np.dot(X.T, error)\n",
+    "            dm = -2 * np.dot(error,X)/X.shape[0]\n",
     "            \n",
     "           \n",
     "            self.b -= (self.lr * db)\n",
@@ -276,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "d3804500",
    "metadata": {},
    "outputs": [
@@ -284,19 +310,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b: 9.075156399295958e+42, m: [-6.04205122e+47  1.97681691e+46  5.00589829e+46  1.89451327e+47\n",
-      "  2.26151783e+45  2.76070526e+45 -5.01314793e+45]\n"
+      "b: -51523.24514398115, m: [-12652.23538594  -1277.76838975   -523.19152995     68.17053328\n",
+      " -17126.28393644 -17125.34414474 -17271.6170628 ]\n"
      ]
     }
    ],
    "source": [
-    "gd = GDRegressor(learning_rate=0.01, epochs=5000)\n",
-    "gd.fit(xtrain, ytrain)\n"
+    "gd = GDRegressor(learning_rate=0.00001, epochs=10000)\n",
+    "gd.fit(xtrain, ytrain)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "8894d1e9",
    "metadata": {},
    "outputs": [],
@@ -306,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "feb66b65",
    "metadata": {},
    "outputs": [],
@@ -320,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "2f82a2e3",
    "metadata": {},
    "outputs": [
@@ -341,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "c280db28",
    "metadata": {},
    "outputs": [
@@ -359,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "a78af918",
    "metadata": {},
    "outputs": [
@@ -369,7 +395,7 @@
        "0.5755628630306235"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "cc2e93cf",
    "metadata": {},
    "outputs": [
@@ -390,7 +416,7 @@
        "-7.037407646247245e+85"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,6 +424,111 @@
    "source": [
     "r2_score(ytest, ypred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "255bb59e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((353, 10), (353,), (89, 10), (89,))"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xtrain,Xtest,Ytrain,Ytest = train_test_split(X_dia,y_dia,test_size=0.2,random_state=42)\n",
+    "Xtrain.shape, Ytrain.shape, Xtest.shape, Ytest.shape                        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "62ca43cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GDRegressors : \n",
+    "    def __init__(self, learning_rate=0.01, epochs=100) :\n",
+    "        self.lr = learning_rate\n",
+    "        self.epochs = epochs\n",
+    "        self.m =None\n",
+    "        self.b = None\n",
+    "        \n",
+    "    def fit(self, Xtrain,Ytrain):\n",
+    "        #X = np.array(X)\n",
+    "        #y = np.array(y)\n",
+    "        \n",
+    "        n_samples, n_features = Xtrain.shape\n",
+    "        self.m = np.zeros(n_features)\n",
+    "        self.b = 0\n",
+    "        \n",
+    "        # Calculate b and m using GD \n",
+    "        for i in range(self.epochs) :\n",
+    "            y_pred = np.dot(Xtrain, self.m) + self.b\n",
+    "            error = Ytrain - y_pred\n",
+    "            \n",
+    "            \n",
+    "            db = -2 * np.mean(error)\n",
+    "           # dm = (-2/n_samples) * np.dot(X.T, error)\n",
+    "            dm = -2 * np.dot(error,Xtrain)/Xtrain.shape[0]\n",
+    "            \n",
+    "           \n",
+    "            self.b -= (self.lr * db)\n",
+    "            self.m -= (self.lr * dm)\n",
+    "        print(f\"b: {self.b}, m: {self.m}\")\n",
+    "    \n",
+    "    def predict(self, X) :\n",
+    "        y_pred = np.dot(X, self.m) + self.b\n",
+    "        return y_pred\n",
+    "           "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "aba81b09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b: 151.31402329206674, m: [  41.36223135 -240.64461079  554.41800146  343.88293446 -312.36052847\n",
+      "   32.80752815 -114.84803922  189.03431081  499.18721216   53.09348668]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.4552040165791882"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gds = GDRegressors(learning_rate=0.9, epochs=9000)\n",
+    "gds.fit(Xtrain,Ytrain)\n",
+    "ypred = gds.predict(Xtest)\n",
+    "r2_score(Ytest, ypred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa494513",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
