--- a/Gradient_Descent/Stochastic_Gradient_Descent.ipynb
+++ b/Gradient_Descent/Stochastic_Gradient_Descent.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f43b7349",
+   "id": "ad7397f6",
    "metadata": {},
    "source": [
-    "## Gradient Descent"
+    "## Stochastic Gradient Descent"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1000d27b",
+   "id": "63f4f4b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "29b2eaa6",
+   "id": "0231ee73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4fff537c",
+   "id": "a4c98a47",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "66cb94d0",
+   "id": "32237983",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ac64c5f2",
+   "id": "e22960d9",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2c3c6c3b",
+   "id": "8868f1ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0570add8",
+   "id": "6a4d4ce6",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "66a02f64",
+   "id": "ae382d42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4fc94936",
+   "id": "842f2925",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5f0a1092",
+   "id": "88b63807",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "feb66b65",
+   "id": "1d9e1f6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "255bb59e",
+   "id": "6a53a535",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "62ca43cf",
+   "id": "64983532",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,18 +317,27 @@
     "        \n",
     "        # Calculate b and m using GD \n",
     "        for i in range(self.epochs) :\n",
-    "            y_pred = np.dot(Xtrain, self.m) + self.b\n",
-    "            error = Ytrain - y_pred\n",
+    "            for j in range(n_samples) :\n",
+    "                \n",
+    "                random_index = np.random.randint(0, n_samples)\n",
+    "                #y_pred = np.dot(X[j], self.m) + self.b\n",
+    "                #error = y[j] - y_pred\n",
+    "                \n",
+    "                #db = -2 * error\n",
+    "                #dm = (-2/n_samples) * np.dot(X[j].T, error)\n",
+    "                \n",
+    "                #self.b -= (self.lr * db)\n",
+    "                #self.m -= (self.lr * dm)\n",
+    "                y_pred = np .dot(Xtrain[random_index], self.m) + self.b\n",
+    "                error = Ytrain[random_index] - y_pred\n",
     "            \n",
+    "                db = -2 * error\n",
+    "            # dm = (-2/n_samples) * np.dot(X.T, error)\n",
+    "                dm = -2 * np.dot(error,Xtrain[random_index])\n",
+    "                \n",
     "            \n",
-    "            db = -2 * np.mean(error)\n",
-    "           # dm = (-2/n_samples) * np.dot(X.T, error)\n",
-    "            dm = -2 * np.dot(error,Xtrain)/Xtrain.shape[0]\n",
-    "            \n",
-    "           \n",
-    "            self.b -= (self.lr * db)\n",
-    "            self.m -= (self.lr * dm)\n",
-    "        print(f\"b: {self.b}, m: {self.m}\")\n",
+    "                self.b -= (self.lr * db)\n",
+    "                self.m -= (self.lr * dm)\n",
     "    \n",
     "    def predict(self, X) :\n",
     "        y_pred = np.dot(X, self.m) + self.b\n",
@@ -338,31 +347,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "aba81b09",
+   "execution_count": 19,
+   "id": "5df6eb1c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b: 151.31402329206674, m: [  41.36223135 -240.64461079  554.41800146  343.88293446 -312.36052847\n",
-      "   32.80752815 -114.84803922  189.03431081  499.18721216   53.09348668]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.4552040165791882"
+       "0.4560990171102167"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gds = GDRegressors(learning_rate=0.9, epochs=9000)\n",
+    "gds = GDRegressors(learning_rate=0.01, epochs=70)\n",
     "gds.fit(Xtrain,Ytrain)\n",
     "ypred = gds.predict(Xtest)\n",
     "r2_score(Ytest, ypred)"
@@ -371,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa494513",
+   "id": "838d1372",
    "metadata": {},
    "outputs": [],
    "source": []
